tests/type/bad/constructor_unknown.hel
foreign io_unit: IO<()>;

p = Unknown{ x: 1.0 };

main = io_unit;
